# Euler

./: .codecov.yaml  .gitattributes  .gitignore  .gitmodules  .luacheckrc  .mailmap  .stignore  .travis.yml  .vale.ini  Euler.sln  Makefile  README.md  README.rst  appveyor.yml  codecov.yaml  doxygen.cfg  shippable.yml
.scripts/: appveyor_script.bat  installpypy3.ps1  shippable_script.sh  travis_script.sh
_data/: answers.csv  answers.tsv  p0828_number_challenges.txt
c/: Makefile  README.md  README.rst  original.out  p0000_template.c  p0001.c  p0002.c  p0003.c  p0004.c  p0005.c  p0006.c  p0007.c  p0008.c  p0009.c  p0010.c  p0011.c  p0012.c  p0013.c  p0014.c  p0015.c  p0016.c  p0017.c  p0020.c  p0025.c  p0030.c  p0034.c  p0076.c  requirements.txt  setup.cfg  test.c  test_euler.py
cplusplus/: Makefile  README.rst  p0000_template.cpp  p0001.cpp  p0002.cpp  p0004.cpp  p0009.cpp  p0011.cpp  p0014.cpp  p0017.cpp  p0034.cpp  p0076.cpp  test.cpp  test_euler.py
csharp/: Makefile  README.md  README.rst  csharp.csproj  csharp.sln
docs/: Makefile  c.rst  conf.py  cplusplus.rst  csharp.rst  index.rst  java.rst  javascript.rst  python.rst  raw_inv.txt  requirements.txt  robots.txt  rust.rst  usage.rst
fortran/: Makefile  README.rst  problem_linker.sh  test.f90
java/: Makefile  README.rst  pom.xml
javascript/: .eslintrc  .eslintrc.json  Makefile  README.md  README.rst  eslint.config.mjs  euler.test.js  index.html  p0000_template.js  p0001.js  p0002.js  p0004.js  p0009.js  package-lock.json  package.json  test.js  webpack.config.js
lua/: Makefile  README.rst  test.lua
python/: Makefile  README.md  README.rst  p0000_template.py  p0001.py  p0002.py  p0003.py  p0004.py  p0005.py  p0006.py  p0007.py  p0008.py  p0009.py  p0010.py  p0011.py  p0012.py  p0013.py  p0014.py  p0015.py  p0016.py  p0017.py  p0018.py  p0019.py  p0020.py  p0021.py  p0022.py  (+60 more)
rust/: Cargo.toml  Makefile  README.rst  mapping.json
rust/src/: lib.rs  main.rs  math.rs  p0001.rs  p0002.rs  p0003.rs  p0004.rs  p0005.rs  p0006.rs  p0007.rs  p0008.rs  p0009.rs  p0010.rs  p0011.rs  p0012.rs  p0013.rs  p0014.rs  p0015.rs  p0016.rs  p0017.rs  p0018.rs  p0019.rs  p0020.rs  p0021.rs  p0022.rs  p0023.rs  p0024.rs  p0027.rs  p0034.rs  p0035.rs  p0036.rs  p0037.rs  p0041.rs  p0045.rs  p0053.rs  p0059.rs  p0069.rs  p0076.rs  p0077.rs  p0087.rs  (+4 more)
rust/src/include/: factors.rs  fibonacci.rs  iter_cache.rs  math.rs  mod.rs  primes.rs  problems.rs  ranges.rs  triangles.rs  utils.rs
rust/src/problems/: mod.rs  p0002.rs  p0004.rs  p0006.rs  p0008.rs  p0009.rs  p0011.rs  p0012.rs  p0013.rs  p0016.rs  p0018.rs  p0019.rs  p0021.rs  p0022.rs  p0024.rs  p0025.rs  p0028.rs  p0037.rs  p0043.rs  p0044.rs  p0059.rs  p0067.rs  p0077.rs  p0087.rs  p0187.rs  p0836.rs
(+981 files in other folders)
