[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
itertools = "0.13.0"
num-traits = "0.2.19"
rstest = "0.21.0"
seq-macro = "0.3.5"
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[lib]
crate-type = ["cdylib"]  # Necessary for WebAssembly builds

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3
debug = true

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1
debug = true
lto = "thin"
