[package]
authors = ["Olivia Appleton"]
name = "rust"
description = "Project Euler solutions in Rust"
documentation = "https://euler.oliviaappleton.com"
homepage = "https://euler.oliviaappleton.com"
repository = "https://github.com/LivInTheLookingGlass/Euler"
version = "0.1.0"
edition = "2021"
rust-version = "1.69"
license = "GPL-3.0"

[dependencies]
itertools = "0.13.0"
lazy_static = "1.5.0"
num-traits = { version = "0.2.19", default-features = false }
seq-macro = "0.3.5"

[dependencies.chrono]
version = "0.4.38"
default-features = false
features = [ "std" ]

[dev-dependencies]
rstest = { version = "0.21.0", default-features = false }

[target.'cfg(any(target_arch="wasm32",target_arch="wasm64"))'.dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "0.2", default-features = false }
wasm-opt = false

[lib]
crate-type = ["cdylib"]  # Necessary for WebAssembly builds

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3
debug = true

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1
debug = true
lto = "thin"
